# RISC-V-Simulator

./: CMakeLists.txt  README.md
src/: main.cpp
src/ClockedChip/: ClockedChip.cpp  ClockedChip.h  Memory.cpp  Memory.h  Register.cpp  Register.h  Registers.cpp  Registers.h
src/Logic/: CombinationalLogic.cpp  CombinationalLogic.h  SeqLogic.cpp  SeqLogic.h
src/Utils/: ALU.cpp  ALU.h  ClockManager.cpp  ClockManager.h  Instruction.cpp  Instruction.h  ROM.cpp  ROM.h  Types.h
